I18 to sonata_model_list

--- a/src/AppBundle/Resources/translations/messages.ru.yml
+++ b/src/AppBundle/Resources/translations/messages.ru.yml
@@ -10,3 +10,7 @@ arrow_down: Вниз
 sections: Разделы
 
 new_1c_products: Новые товары из 1С
+
+add_more: Добавить несколько
+errors: Ошибки
+loaded: загружен
