I18n to category_list

--- a/src/AppBundle/Resources/translations/messages.ru.yml
+++ b/src/AppBundle/Resources/translations/messages.ru.yml
@@ -14,3 +14,5 @@ new_1c_products: Новые товары из 1С
 add_more: Добавить несколько
 errors: Ошибки
 loaded: загружен
+
+catalog_sections: Разделы каталога
