I18n to Articles index

--- a/src/AppBundle/Resources/translations/messages.ru.yml
+++ b/src/AppBundle/Resources/translations/messages.ru.yml
@@ -16,3 +16,7 @@ errors: Ошибки
 loaded: загружен
 
 catalog_sections: Разделы каталога
+
+articles: Статьи
+learn_more: Подробнее
+no_items_found: Материалов не найдено
