Add I18n to Cabinet buy #STEP1 - TEST

--- a/src/AppBundle/Resources/translations/messages.ru.yml
+++ b/src/AppBundle/Resources/translations/messages.ru.yml
@@ -20,3 +20,19 @@ catalog_sections: Разделы каталога
 articles: Статьи
 learn_more: Подробнее
 no_items_found: Материалов не найдено
+
+buying_models: Покупка моделей
+helpful_information: Полезная информация
+
+cabinet_buy:
+  healful_info:
+    - "Минимальное колличество покупки - 2 PRO."
+    - "PRO начисляется единовременно и не имеет ограничения во времени скачивания."
+    - "30 FREE начисляется каждый день в рамках оплаченного срока."
+    - "При оплате через терминалы и другие оффлайн способы - срок получения доступа может достигать 3-х дней."
+    - "Оплата с помощью банковской карты - только для стран СНГ."
+    - "Оплата через терминалы - только для России."
+    - "В случае утери pro-модели или неудачном скачаивании - восстановить её в истории покупок."
+    - "Если у вас уже есть PRO-доступы - последуюшая покупка суммируется."
+    - "Для корпоративных клиентов. Минимальный заказ 1000 доступов PROFI. Оформление договора и безналичный расчет. Для уточнения деталей обращайтесь в службу поддержки."
+    - "Служба поддержки. При обращении обязательно указывайте номер заказа."
