Отображение причины блокировки "без причины" если модель заблокирована без указания причины.

--- a/src/AppBundle/Resources/translations/messages.en.yml
+++ b/src/AppBundle/Resources/translations/messages.en.yml
@@ -80,6 +80,7 @@ payment_go_to_treatment: Your payment has been accepted for processing.
 go_to_profile: Go to My Account
 search_notfound: Unfortunately, your search returned no results.
 model_blocked_by_reason: The model is locked for a reason
+without_reason: without reason
 models_available: Available Models
 download: Download
 edit: Edit
