--- a/src/AppBundle/Resources/translations/messages.ru.yml
+++ b/src/AppBundle/Resources/translations/messages.ru.yml
@@ -82,6 +82,7 @@ payment_go_to_treatment: Ваш платеж принят в обработку.
 go_to_profile: Перейти в личный кабинет
 search_notfound: К сожалению, по Вашему запросу ничего не найдено.
 model_blocked_by_reason: Модель заблокирована по причине
+without_reason: без причины
 models_available: Доступно покупок
 download: Скачать
 edit: Редактировать
