Публичный профайл -> Профиль

--- a/src/AppBundle/Resources/translations/messages.en.yml
+++ b/src/AppBundle/Resources/translations/messages.en.yml
@@ -179,7 +179,7 @@ user_not_favourites: You have not added any favorites to your favorites yet.
 user_not_buying: You have not bought anything yet
 language: Language
 administration_header: Administration
-public_profile: Public profile
+public_profile: Profile
 settings: Settings
 notifications: Notifications
 exit: Exit
