--- a/src/AppBundle/Resources/translations/messages.ru.yml
+++ b/src/AppBundle/Resources/translations/messages.ru.yml
@@ -70,6 +70,7 @@ profile_about_myself: О себе
 change: Изменить
 notifications_header: Уведомления
 materials_not_found: Материалы не найдены
+notifications_not_found: Уведомления не найдены
 readmore: Читать дальше...
 change_password_header: Сменить пароль
 new_password: Новый пароль
