--- a/src/AppBundle/Resources/translations/messages.ru.yml
+++ b/src/AppBundle/Resources/translations/messages.ru.yml
@@ -195,6 +195,8 @@ current_sales: Текущие продажи
 total_sales: Общие продажи
 available_models: Доступно моделей
 purchases: Покупки
+tooltip_sales: Сумма полученная с продаж Ваших моделей
+tooltip_downloads: Количество моделей, которое Вас доcтупно для скачивания
 about_sym_header: Кратко о SYM
 about_sym_description: Sellyourmodel.com – это место встречи талантливых авторов 3D-моделей и тех, кто ищет качественные работы.<br />Наша задача – сделать покупку 3D-моделей максимально выгодной и простой, а также развиваться, предлагая все более проработанный и востребованный контент от опытных специалистов.
 about_sym_description_header: О проекте
