--- a/src/AppBundle/Resources/translations/messages.en.yml
+++ b/src/AppBundle/Resources/translations/messages.en.yml
@@ -130,6 +130,7 @@ search_by_tags_header: Search by tag
 search_by_tags_notfound: There are no models for the given tag.
 new_in_catalog: New in the catalog
 best: The best
+show_all: Show all
 login_left: Do you want to shop much faster?<br />Buy prepaid Loans and download products one click!
 registration_header: Registration
 registration_left: Do you want to shop much faster? Buy prepaid Loans and download products one click!
