--- a/src/AppBundle/Resources/translations/messages.ru.yml
+++ b/src/AppBundle/Resources/translations/messages.ru.yml
@@ -132,6 +132,7 @@ search_by_tags_header: Поиск по тегу
 search_by_tags_notfound: По заданному тегу нет моделей.
 new_in_catalog: Новое в каталоге
 best: Лучшее
+show_all: Смотреть все
 login_left: Хотите делать покупки гораздо быстрей?<br />Купите предоплачиваемые Кредиты и скачивайте товары по одному клику!
 registration_header: Регистрация
 registration_left: Хотите делать покупки гораздо быстрей?<br />Купите предоплачиваемые Кредиты и скачивайте товары по одному клику!
