--- a/src/AppBundle/Resources/translations/messages.ru.yml
+++ b/src/AppBundle/Resources/translations/messages.ru.yml
@@ -49,6 +49,7 @@ user_agreement: пользовательским соглашением
 agent_agreement: агентским договором–офертой
 payment_agreement: публичной офертой на оплату
 buy_form_redirect: Идет переадресация на форму заказа, если этого не произошло нажмите на кнопку внизу.
+buy_form_no_pay: Вы оплатили заказ средставми с продаж моделей, количество дсотупных для покупки моделей увеличилось.
 go_to_pay_btn: Перейти к оплате
 settings_header: Настройки
 my_models: Мои модели
