Скрытие длинного теста в карточке

--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -147,6 +147,8 @@ search_by_tags_notfound: There are no models for the given tag.
 new_in_catalog: New in the catalog
 best: The best
 show_all: Show all
+show_more: Show more
+show_less: Show less
 login_left: Do you want to shop much faster?<br />Buy prepaid Loans and download products one click!
 registration_header: Registration
 registration_left: Do you want to shop much faster? Buy prepaid Loans and download products one click!
