--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -149,6 +149,8 @@ search_by_tags_notfound: По заданному тегу нет моделей.
 new_in_catalog: Новое в каталоге
 best: Лучшее
 show_all: Смотреть все
+show_more: Показать текст полностью
+show_less: Скрыть текст
 login_left: Хотите делать покупки гораздо быстрей?<br />Купите предоплачиваемые Кредиты и скачивайте товары по одному клику!
 registration_header: Регистрация
 registration_left: Хотите делать покупки гораздо быстрей?<br />Купите предоплачиваемые Кредиты и скачивайте товары по одному клику!
