--- a/translations/messages.ru.yml
+++ b/translations/messages.ru.yml
@@ -90,7 +90,7 @@ change_password_header: Сменить пароль
 new_password: Новый пароль
 repeat_password: Повторите пароль
 socials_header: Соц. профайлы
-socials_left_text: Для подключения или отключения социальной сети - нажмите на ее логотип (подключение и отключение на тестовом сервере не работает, галочкой для примера показана подключенная соц. сеть)
+socials_left_text: Для подключения или отключения социальной сети - нажмите на ее логотип
 buying_models_header: Покупка моделей
 payment_error: Сожалеем, что у Вас сложились проблемы с оплатой.
 payment_go_to_treatment: Ваш платеж принят в обработку.
